# hylde

./: .gitignore  Dockerfile  README.md  config.toml  pyproject.toml
.github/workflows/: docker-build.yml
hylde/: __init__.py  downloader.py  jdownloader.py  registry.py  server.py  util.py  wrapper.py
hylde/downloaders/: gallerydl.py  jdownloader.py
tests/: test_gallerydl_incomplete_read.py  test_registry.py  test_server.py  test_wrapper.py
