[tool.poetry]
name = "hylde"
version = "0.5.0"
description = "An external hydrus downloader."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
requests = "^2.32.3"
loguru = "^0.7.2"
pyjd = "^1.0.13"
dynaconf = "^3.2.6"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
mypy = ">=1.13.0"
notebook = ">=7.2.2"
types-toml = ">=0.10.8.20240310"
types-requests = ">=2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
