[tool.poetry]
name = "hylde"
version = "0.7.2"
description = "An external hydrus downloader."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
Flask = "^3.1.0"
requests = "^2.32.3"
loguru = ">=0.7.2"
pyjd = "^1.0.13"
dynaconf = "^3.2.10"
gallery-dl = "^1.30.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.9"
mypy = ">=1.15.0"
notebook = ">=7.2.2"
types-toml = ">=0.10.8.20240310"
types-requests = ">=2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
